[gd_scene load_steps=2 format=3 uid="uid://decoration_panel"]

[ext_resource type="Script" path="res://scripts/ui/decoration_panel.gd" id="1_deco_panel"]

[node name="DecorationPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_deco_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "装饰商店"

[node name="BeautyLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
text = "农场美观度: 0"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "×"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CategoryList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="CategoryLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "分类"

[node name="FurnitureBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "家具"

[node name="PlantBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "植物"

[node name="FenceBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "围栏"

[node name="PathBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "道路"

[node name="LightingBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "灯光"

[node name="StatueBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "雕像"

[node name="SeasonalBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "季节限定"

[node name="OwnedBtn" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/CategoryList"]
layout_mode = 2
text = "我的装饰"

[node name="ItemScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ContentContainer/ItemScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="DetailPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="DetailContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DetailName" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "选择一个装饰"
horizontal_alignment = 1

[node name="DetailImage" type="TextureRect" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="DetailDescription" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "点击左侧装饰查看详情"
autowrap_mode = 2

[node name="DetailStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SizeLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent/DetailStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "尺寸: -"

[node name="BeautyLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent/DetailStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "美观度: -"

[node name="PriceLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent/DetailStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.8, 0.3, 1)
text = "价格: -"

[node name="OwnedLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent/DetailStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
text = "拥有: 0"

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent"]
layout_mode = 2
alignment = 1

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "购买"

[node name="PlaceButton" type="Button" parent="MarginContainer/VBoxContainer/ContentContainer/DetailPanel/DetailContent/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "放置"
